<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
        android:background="@color/colorLight"
    android:padding="8dp"
    tools:context=".MainActivity">


    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/cadastro_usuarios"
    android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nome"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="left"
        android:text="" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cpf"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_cpf"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_gravity="left"
        android:layout_marginTop="5sp"
        android:inputType="text"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/data_nascimento"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_data_nascimento"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:layout_gravity="left"
        android:layout_marginTop="5sp"
        android:inputType="text"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/unidade"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_unidade"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="left"
        android:layout_marginTop="5sp"
        android:inputType="text"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/senha"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_gravity="left"
        android:layout_marginTop="5sp"
        android:inputType="textPassword"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirmacao_senha"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_confirmar_senha"
        android:layout_width="300dp"
        android:layout_height="33dp"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="textPassword"
        android:text="" />

    <Button
        android:id="@+id/button_inscrever"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:onClick="submit"
        android:text="@string/cadastrar_usuario"
        android:textColor="@color/colorLight" />


</LinearLayout>