<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@drawable/abastecimento"
    android:padding="8dp"
    tools:context=".MainActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nome"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cpf"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_cpf"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:inputType="numberSigned"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/senha"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_senha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="numberPassword"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/data"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="date"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/km_inicial"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_km_inicial"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="numberSigned"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/km_final"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_km_final"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="numberSigned"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hora_inicial"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/edit_hora_inicial"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="numberSigned"
        android:text="" />

    <Button
        android:id="@+id/button_inscrever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:onClick="submit"
        android:text="@string/inscrever"
        android:textColor="@color/colorLight" />


</LinearLayout>