<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@color/colorLight"
    android:padding="8dp"
    tools:context=".CadastroVeiculoActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:text="@string/marca" />

    <EditText
        android:id="@+id/edit_marca"
        android:layout_width="300dp"
        android:layout_height="33dp"
        android:layout_gravity="left"
        android:text="" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="@string/placa" />


    <EditText
        android:id="@+id/edit_placa"
        android:layout_width="300dp"
        android:layout_height="33dp"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="text"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="@string/ano" />

    <EditText
        android:id="@+id/edit_ano"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="number"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="@string/modelo" />


    <EditText
        android:id="@+id/edit_modelo"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="text"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="@string/cor" />


    <EditText
        android:id="@+id/edit_cor"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="text"
        android:text="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="@string/combustivel" />


    <EditText
        android:id="@+id/edit_combustivel"
        android:layout_width="300dp"
        android:layout_height="32dp"
        android:layout_gravity="left"
        android:layout_marginTop="25sp"
        android:inputType="text"
        android:text="" />


    <Button
        android:id="@+id/button_inscrever"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/colorAccent"
        android:onClick="submit"
        android:text="@string/cadastrar"
        android:textColor="@color/colorLight" />


</LinearLayout>
</ScrollView>